--- a/index.html
+++ b/index.html
@@ -144,8 +144,45 @@
 
 
         <!-- sezione contatti social -->
-        <section class="contatti-social">
+        <section class="contatti-social py_100 text-center">
 
+            <!-- sezione titolo -->
+            <div class="row">                        
+                <div class="col-12 title-social d-flex">
+                    <h3>Seguici sui social media</h3> 
+                </div>                                                                                   
+            </div>   
+
+
+            <!-- sezione icone -->
+            <div class="row">                                 
+                <div class="contenent-icon d-flex flex-wrap justify-content-center">
+                    <div class="col-6 col-sm-3">
+                        <div class="icon-img">
+                            <img class="item-img " src="img/twitter.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-6 col-sm-3">
+                        <div class="icon-img">
+                            <img class="item-img " src="img/facebook.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-6 col-sm-3">
+                        <div class="icon-img">
+                            <img class="item-img " src="img/instagram.jpg" alt="">
+                        </div>
+                    </div>
+                        
+                    <div class="col-6 col-sm-3">
+                        <div class="icon-img">
+                            <img class="item-img " src="img/youtube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                   
+            </div>
         </section>    
 
 
