finito, ma da migliorare qualcosina

--- a/index.html
+++ b/index.html
@@ -204,12 +204,11 @@
         </section>
 
         <!-- sezione playstation 5 -->
-        <section class="py_100 ">
+        <section class="p_t100_b50">
             <div class="container-xl"> 
 
                 <!-- sezione titolo -->
-                <div class="row">   
-                    
+                <div class="row">                     
                     <div class="d-none col-md-3 d-md-block"></div>
                     
                     <div class="col-12 col-md-6 d-flex text-center flex-column ">
@@ -268,6 +267,24 @@
                 </div>
 
 
+            </div>
+        </section>
+
+        <!-- sezione it takes two -->        
+        <section class="it-takes-two">
+            <div class="container-xl height-full">            
+                <div class="row height-full align-items-end "> 
+
+                    <div class="col-12 col-lg-4 d-flex flex-wrap">                                  
+                        <img class="img-item-jumbo" src="img/it-takes-two-logo.png" alt="avatar">                    
+                        <h2 class="text-white my-3 ">Un'avventura cooperativa selvaggia ti attende</h2>                                        
+                        <p class="text-white my-3">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                        <button type="button" class="btn  bcg_btn_jumbo rounded-pill" ><a class="text-white d-flex justify-content-center align-items-center text-decoration-none" href="#">Acquista ora</a></button>                            
+                    </div>
+
+                    <div class="d-none col-lg-4 d-lg-block"></div>
+                    <div class="d-none col-lg-4 d-lg-block"></div>                     
+                </div>                
             </div>
         </section>
 
