--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                     <img class="img-up-header me-3" src="img/sony_scritta.svg" alt="">
                 </div>                
             </div>
-
         </div> 
 
         <!-- sezione navbar -->                       
@@ -137,9 +136,9 @@
         <!-- sezione jumbotron -->
         <section class="jumbotron">
             <div class="container-xl height-full">            
-                <div class="row height-full align-items-end"> 
+                <div class="row height-full align-items-end flex-wrap"> 
 
-                    <div class="col-12 col-lg-4 d-flex flex-wrap ">                                  
+                    <div class="col-12 col-lg-4  ">                                  
                         <img class="col-sm-8 img-item-jumbo" src="img/returnal-hero-banner-logo.png" alt="avatar">                    
                         <h2 class="col-sm-8 text-white my-3">Rompi il cerchio</h2>                                        
                         <p class="text-white my-3">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thirller fantascientifico, disponibile in esclusiva su PS5.</p>
@@ -239,25 +238,25 @@
                 </div>
 
                 <!-- sezione inferiore -->
-                <div class="row g-5">
+                <div class="row text-center justify-content-center">
                     <div class="d-none col-md-1 d-md-block"></div>
-                    <div class="col-4 col-md-2 text-center">
+                    <div class="col-4 col-md-2 ">
                         <img class="icon-text-ps5"  src="img/playstation-5-thumb.png" alt="">
                         <p class="text-muted">Console PS5</p>
                     </div>
-                    <div class="col-4 col-md-2 text-center">
+                    <div class="col-4 col-md-2 ">
                         <img class="icon-text-ps5" src="img/joypad-thumb.png" alt="">
                         <p class="text-muted">Controller wireless DualSense™</p>
                     </div>
-                    <div class="col-4 col-md-2 text-center">
+                    <div class="col-4 col-md-2 ">
                         <img class="icon-text-ps5" src="img/headset-thumb.png" alt="">
                         <p class="text-muted">Cuffie wireless con microfono PULSE 3D™</p>
                     </div>
-                    <div class="col-4 col-md-2 text-center">
+                    <div class="col-4 col-md-2 ">
                         <img class="icon-text-ps5" src="img/remote-thumb.png" alt="">
                         <p class="text-muted">Telecomando Media</p>
                     </div>
-                    <div class="col-4 col-md-2 text-center">
+                    <div class="col-4 col-md-2 ">
                         <img class="icon-text-ps5" src="img/camera-thumb.jpg" alt="">
                         <p class="text-muted">Telecamera HD</p>
                     </div>
@@ -268,12 +267,12 @@
         </section>
 
         <!-- sezione it takes two -->        
-        <section class="it-takes-two">
-            <div class="container-xl height-full">            
-                <div class="row height-full align-items-center "> 
+        <section class="it-takes-two ">
+            <div class="container-xl ">            
+                <div class="row py_35 align-items-center flex-wrap "> 
 
-                    <div class="col-12 col-lg-4 d-flex flex-wrap">                                  
-                        <img class="img-item-jumbo" src="img/it-takes-two-logo.png" alt="avatar">                    
+                    <div class="col-12 col-lg-4">                                  
+                        <img class="img-item-it-takes-two" src="img/it-takes-two-logo.png" alt="avatar">                    
                         <h2 class="text-white my-5 ">Un'avventura cooperativa selvaggia ti attende</h2>                                        
                         <p class="text-white my-5 ">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
                         <button type="button" class="btn  bcg_btn_jumbo rounded-pill" ><a class="text-white d-flex justify-content-center align-items-center text-decoration-none" href="#">Acquista ora</a></button>                            
