--- a/index.html
+++ b/index.html
@@ -238,27 +238,27 @@
                 </div>
 
                 <!-- sezione inferiore -->
-                <div class="row text-center justify-content-center">
+                <div class="row text-center text-muted justify-content-star">
                     <div class="d-none col-md-1 d-md-block"></div>
-                    <div class="col-4 col-md-2 ">
+                    <div class="col-4 col-md-2 ">                        
                         <img class="icon-text-ps5"  src="img/playstation-5-thumb.png" alt="">
-                        <p class="text-muted">Console PS5</p>
+                        <p class="d-none col-md-12 d-md-block">Console PS5</p>
                     </div>
                     <div class="col-4 col-md-2 ">
                         <img class="icon-text-ps5" src="img/joypad-thumb.png" alt="">
-                        <p class="text-muted">Controller wireless DualSense™</p>
+                        <p class="d-none col-md-12 d-md-block">Controller wireless DualSense™</p>
                     </div>
                     <div class="col-4 col-md-2 ">
-                        <img class="icon-text-ps5" src="img/headset-thumb.png" alt="">
-                        <p class="text-muted">Cuffie wireless con microfono PULSE 3D™</p>
+                        <img class="col-md-9 icon-text-ps5" src="img/headset-thumb.png" alt="">
+                        <p class="d-none col-md-12 d-md-block">Cuffie wireless con microfono PULSE 3D™</p>
                     </div>
                     <div class="col-4 col-md-2 ">
                         <img class="icon-text-ps5" src="img/remote-thumb.png" alt="">
-                        <p class="text-muted">Telecomando Media</p>
+                        <p class="d-none col-md-12 d-md-block">Telecomando Media</p>
                     </div>
                     <div class="col-4 col-md-2 ">
                         <img class="icon-text-ps5" src="img/camera-thumb.jpg" alt="">
-                        <p class="text-muted">Telecamera HD</p>
+                        <p class="d-none col-md-12 d-md-block">Telecamera HD</p>
                     </div>
                     <div class="d-none col-md-1 d-md-block"></div>
                     
