animato i bottoni in due modi diversi

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li class="nav-item dropdown px-1 fs-5 ">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Giochi</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><img src="img/play-menu-ico.png" alt=""></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -111,20 +111,19 @@
                     <form class="d-flex">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown fs-5">
-                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">My PlayStation</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">My PlayStation</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <img class="dropdown-item" src="img/play-menu-ico.png" alt="#">
+                                    <img class="dropdown-item" src="img/play-menu-ico.png" alt="#">                                    
+                                    <div class="line-divider"></div>
+                                    <span><a href="">ciao</a></span>                                 
+                                </div>
                             </li> 
                         </ul>
                         <button type="button" class="btn btn-dark rounded-pill fs-5 px-4 mx-2">Accedi</button>
                         <span><i class="fas fa-search p-2 fs-3 align-items-center"></i></span>
                     </form>
                 </div>
-
             </div>
         </nav>   
     </header>
@@ -163,7 +162,7 @@
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <div class="icon-jumbo ">
-                            <img class="item-img-news" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                            <img class="item-img-news rounded-3" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                            
                         </div>
                     </div>
@@ -274,7 +273,7 @@
         <!-- sezione it takes two -->        
         <section class="it-takes-two ">
             <div class="container-xl ">            
-                <div class="row py_35 align-items-center flex-wrap "> 
+                <div class="row py_65 align-items-center flex-wrap "> 
 
                     <div class="col-12 col-lg-4">                                  
                         <img class="img-item-it-takes-two" src="img/it-takes-two-logo.png" alt="avatar">                    
